Closed
Bug 373483
Opened 19 years ago
Closed 19 years ago
Crash [@ nsHTMLButtonElement::PostHandleEvent] when right-clicking on the button in this testcase
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: martijn.martijn, Assigned: smaug)
References
Details
(Keywords: crash, testcase)
Crash Data
Attachments
(2 files, 1 obsolete file)
|
651 bytes,
application/xhtml+xml
|
Details | |
|
1.43 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
See testcase, when right-clicking on the button, I crash with current trunk builds.
Talkback ID: TB30113065M
nsHTMLButtonElement::PostHandleEvent [mozilla/content/html/content/src/nshtmlbuttonelement.cpp, line 435]
nsEventTargetChainItem::PostHandleEvent [mozilla/content/events/src/nseventdispatcher.cpp, line 216]
nsEventTargetChainItem::HandleEventTargetChain [mozilla/content/events/src/nseventdispatcher.cpp, line 317]
nsEventDispatcher::Dispatch [mozilla/content/events/src/nseventdispatcher.cpp, line 472]
PresShell::HandleEventInternal [mozilla/layout/base/nspresshell.cpp, line 5454]
PresShell::HandlePositionedEvent [mozilla/layout/base/nspresshell.cpp, line 5345]
PresShell::HandleEvent [mozilla/layout/base/nspresshell.cpp, line 5188]
nsViewManager::HandleEvent [mozilla/view/src/nsviewmanager.cpp, line 1622]
nsViewManager::DispatchEvent [mozilla/view/src/nsviewmanager.cpp, line 1575]
HandleEvent [mozilla/view/src/nsview.cpp, line 174]
nsWindow::DispatchEvent [mozilla/widget/src/windows/nswindow.cpp, line 1103]
nsWindow::DispatchMouseEvent [mozilla/widget/src/windows/nswindow.cpp, line 6269]
This regressed between 2006-11-16 and 2006-11-17:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-11-16+04&maxdate=2006-11-17+06&cvsroot=%2Fcvsroot
I guess a regression from bug 354694.
The strange thing is, I wouldn't expect to tee a button with the testcase at all, because it should have been removed by the script. (that doesn't seem to be a regression, I can see that also in Mozilla1.7.13).
| Reporter | ||
Comment 1•19 years ago
|
||
The previous one didn't crash online, this one should crash online when right-clicking on the button.
Attachment #258141 -
Attachment is obsolete: true
| Assignee | ||
Comment 2•19 years ago
|
||
It used to look like this:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/content/html/content/src/nsHTMLButtonElement.cpp&rev=1.149&mark=430-432#430
Assignee: events → Olli.Pettay
Status: NEW → ASSIGNED
Attachment #258150 -
Flags: superreview?(jst)
Attachment #258150 -
Flags: review?(jst)
Comment 3•19 years ago
|
||
Comment on attachment 258150 [details] [diff] [review]
Add back the strange if (domEvent) check which used to be there
r+sr=jst
Attachment #258150 -
Flags: superreview?(jst)
Attachment #258150 -
Flags: superreview+
Attachment #258150 -
Flags: review?(jst)
Attachment #258150 -
Flags: review+
| Assignee | ||
Updated•19 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Updated•19 years ago
|
Flags: in-testsuite?
Updated•15 years ago
|
Crash Signature: [@ nsHTMLButtonElement::PostHandleEvent]
Updated•7 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•