Bug 373483, Crash [@ nsHTMLButtonElement::PostHandleEvent] when right-clicking on the button in this testcase, r+sr=jst